<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F4F1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewWelcome"
        android:layout_width="379dp"
        android:layout_height="336dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:srcCompat="@drawable/marathon" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/welcome_msg"
        android:textAlignment="center"
        android:textColor="#3A4856"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <Button
        android:id="@+id/welcomeButtonUser"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#9EEF87"
        android:letterSpacing="0.25"
        android:text="@string/welcome_btn_user"
        app:layout_constraintEnd_toStartOf="@+id/welcomeButtonAdmin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWelcome" />

    <Button
        android:id="@+id/welcomeButtonAdmin"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#9EEF87"
        android:letterSpacing="0.25"
        android:text="@string/welcome_btn_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/welcomeButtonUser"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>